--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Generate Snake
 
-# Controls when the action will run
 on:
   schedule:
-    # Runs every 6 hours
     - cron: "0 */6 * * *"
   workflow_dispatch:
 
@@ -13,9 +11,14 @@ jobs:
 
     steps:
       # Step 1: Checkout the repository
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      # Step 2: Generate the snake animation
+      # Step 2: Set file permissions to avoid permission issues
+      - name: Set file permissions
+        run: |
+          chmod -R 777 dist || true
+
+      # Step 3: Generate the snake animation
       - name: Generate Snake
         uses: Platane/snk@master
         id: snake-gif
@@ -24,26 +27,19 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Step 3: Push the changes to the output branch
-      - name: Push changes to output branch
-        uses: actions/checkout@v2
-        with:
-          ref: output
-
-      - name: Copy files to the output branch
-        run: |
-          mkdir -p dist
-          cp dist/github-contribution-grid-snake.* $GITHUB_WORKSPACE
-
-      - name: Push changes
+      # Step 4: Add and commit the generated files
+      - name: Add files and commit
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
           git add dist/github-contribution-grid-snake.*
           git commit -m "Generated snake animation" || echo "No changes to commit"
-          git push origin output
+      
+      # Step 5: Push changes to output branch
+      - name: Push changes
+        run: git push origin output
 
-      # Step 4: Deploy the output to GitHub Pages
+      # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
