--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,6 @@ jobs:
       # Step 3: Generate the snake animation
       - name: Generate Snake
         uses: Platane/snk@master
-        id: snake-gif
         with:
           github_user_name: liam-007
           gif_out_path: dist/github-contribution-grid-snake.gif
@@ -36,14 +35,15 @@ jobs:
           git config user.email "action@github.com"
           git add dist/github-contribution-grid-snake.*
           git commit -m "Generated snake animation" || echo "No changes to commit"
-
+      
       # Step 5: Push changes to output branch
       - name: Push changes
-        run: git push origin output || true
+        run: |
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/liam-007/liam-007.git HEAD:output || true
 
       # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
